BEEWEB-48 Modal scroll fixed on mobile display

--- a/src/octoprint/plugins/screen_squish/static/less/squish.less
+++ b/src/octoprint/plugins/screen_squish/static/less/squish.less
@@ -118,3 +118,7 @@
 #settings_dialog #squishSettingsTabButton {
   display:none;
 }
+
+#maintenance_dialog {
+  position:absolute;
+}
